--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Wjd.GitHub.com</h1>
+      <h1 class="project-name">王金豆</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/pythonwang/wjd.github.com" class="btn">View on GitHub</a>
       <a href="https://github.com/pythonwang/wjd.github.com/zipball/master" class="btn">Download .zip</a>
