--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>css3 Hover</title>
     <style type="text/css">
         .demo,.img,.border,.mask{
-            width: 300px;
-            height: 300px;
+            width: 170px;
+            height: 170px;
         }
         .demo{
             display: block;
@@ -21,9 +21,9 @@
         }
         .border{
             position: absolute;
-            border: 10px solid #072256;
-            border-left-color:#E07514;
-            border-top-color:#E07514;
+            border: 5px solid #072256;
+            border-left-color:#458B00;
+            border-top-color:#458B00;
             top: 0;
             left: 0;
             border-radius: 50%;
@@ -70,6 +70,7 @@
         </div>
         <div class="border"></div>
     </a>
+    <h2 style="center">王金豆</h2>
 </body>
 </html></pre>
 <p>
