--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="border"></div>
     </a>
-    <h2 style="center">王金豆</h2>
+    <h1><center>王金豆</center></h1>
 </body>
 </html></pre>
 <p>
