--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>css3 Hover</title>
+    <title>github在线简历</title>
     <style type="text/css">
         .demo,.img,.border,.mask{
             width: 170px;
@@ -11,7 +11,7 @@
         .demo{
             display: block;
             position: relative;
-            margin:50px auto;
+            margin:20px auto;
         }
         .img{
             background-repeat: no-repeat;
